tests/ui/consts/const-eval/match-test-ptr-null.stderr
error: pointers cannot be cast to integers during const eval
  --> $DIR/match-test-ptr-null.rs:6:15
   |
LL |         match &1 as *const i32 as usize {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: at compile-time, pointers do not have an integer value
   = note: avoiding this restriction via `transmute`, `union`, or raw pointers leads to compile-time undefined behavior

error: aborting due to 1 previous error

